<resources>
    <string name="app_name">Quiz</string>
    <string name="black">black</string>
    <string name="purple">purple</string>
    <string name="yellow">yellow</string>
    <string name="green">green</string>
    <string name="question_one">What colors are considered light?</string>
    <string name="question_one_heading">Question 1:</string>
    <string name="brown">brown</string>
    <string name="white">white</string>
    <string name="question_two_heading">Question 2:</string>
    <string name="question_two">What color is opposite of white?</string>
    <string name="question_three_heading">Question 3:</string>
    <string name="question_three">What color does yellow and red make?</string>
    <string name="question_four_heading">Question 4:</string>
    <string name="question_four">What color starts with B and ends with N??</string>
    <string name="submit_answers">Submit Answers</string>
    <string name="results">Results:</string>
</resources>
